# sentanaly

./: IC SYSTEM.txt  README.md  mainCodeDLAndSpark.py  mainCodeDLAndSparkAndPipline.py  mainCodeJustDL.py  requirements.txt
nestjs-websocket-demo/: Dockerfile  docker-compose.yml  package.json  pnpm-lock.yaml
nestjs-websocket-demo/src/: app.module.ts
nestjs-websocket-demo/src/items/: item.schema.ts  items.controller.ts  items.gateway.ts  items.module.ts  items.service.ts
reddit-stream/: .env  .gitignore  Cargo.toml
reddit-stream/src/: lib.rs  main.rs
reddit-stream/src/kafka/: mod.rs
reddit-stream/src/reddit/: mod.rs
websocket-frontend/: Dockerfile  docker-compose.yml  package.json  pnpm-lock.yaml
websocket-frontend/src/: App.tsx
