[package]
name = "reddit-stream"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
rdkafka = { version = "0.29", features = ["cmake-build"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
chrono = "0.4"
base64 = "0.21"

[[bin]]
name = "reddit_stream"
path = "src/main.rs"

[[bin]]
name = "consumer"
path = "src/bin/consumer.rs"
